--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,18 @@
-setuptools==40.0.0
-django==1.11.4
+autopep8==1.3.5
+certifi==2018.8.13
+chardet==3.0.4
+Django==1.11.4
+django-common-helpers==0.9.2
+django-cron==0.5.1
+django-rest-framework==0.1.0
+djangorestframework==3.8.2
+idna==2.7
+iso639==0.1.4
+ObjDict==0.4.4
 psycopg2==2.7.5
 psycopg2-binary==2.7.5
-django_cron==0.5.1
-objdict==0.4.4
-django-rest-framework==0.1.0
+pycodestyle==2.4.0
+pytz==2018.5
 requests==2.19.1
-iso639==0.1.4
-
+urllib3==1.23
+gunicorn==19.9.0
